--- a/.dvc/config
+++ b/.dvc/config
@@ -1,3 +1,5 @@
+[core]
+    remote = origin
 ['remote "origin"']
     url = s3://dvc
     endpointurl = https://dagshub.com/Aryanupadhyay23/Zomato-Food-Delivery-Time-prediction.s3
