--- a/data/.gitignore
+++ b/data/.gitignore
@@ -1,6 +1,12 @@
-# ignore all actual data files
+# data/.gitignore
+
+# Ignore everything...
 *
-!*/          
+
+# ...BUT do not ignore subdirectories (This is the fix!)
+!*/
+
+# ...AND do not ignore .dvc files or this gitignore itself
 !*.dvc
 !**/*.dvc
 !.gitignore
