--- a/dvc.yaml
+++ b/dvc.yaml
@@ -6,3 +6,11 @@ stages:
       - data/raw/Zomato-Dataset.csv
     outs:
       - data/cleaned/zomato_cleaned.csv
+
+  data_preprocessing:
+    cmd: python src/data/data_preprocessing.py
+    deps:
+      - src/data/data_preprocessing.py
+      - data/cleaned/zomato_cleaned.csv
+    outs:
+      - data/interim/food_delivery_interim.csv
