--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,10 +7,20 @@ stages:
     outs:
       - data/cleaned/zomato_cleaned.csv
 
-  data_preprocessing:
-    cmd: python src/data/data_preprocessing.py
+  feature_selection:
+    cmd: python src/features/feature_selection.py
     deps:
-      - src/data/data_preprocessing.py
+      - src/features/feature_selection.py
       - data/cleaned/zomato_cleaned.csv
     outs:
       - data/interim/food_delivery_interim.csv
+
+  data_splitting:
+    cmd: python src/features/data_splitting.py
+    deps:
+      - src/features/data_splitting.py
+      - data/interim/food_delivery_interim.csv
+      - params.yaml
+    outs:
+      - data/processed/train.csv
+      - data/processed/test.csv
