--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,4 +1,5 @@
 stages:
+
   data_cleaning:
     cmd: python src/data/data_cleaning.py
     deps:
@@ -39,16 +40,28 @@ stages:
       - src/models/model_training.py
       - data/processed/train.csv
       - artifacts/preprocessor.pkl
+      - params.yaml
     outs:
-      - models/stacking_cat_rf_pipeline.joblib  
+      - models/stacking_cat_rf_pipeline.joblib
 
   model_evaluation:
     cmd: python src/models/model_evaluation.py
     deps:
       - src/models/model_evaluation.py
+      - data/processed/train.csv
       - data/processed/test.csv
-      - artifacts/preprocessor.pkl
-      - models/stacking_cat_rf_pipeline.joblib  
+      - models/stacking_cat_rf_pipeline.joblib
+      - params.yaml
     metrics:
       - reports/metrics.json:
           cache: false
+
+  model_diagnostics:
+    cmd: python src/models/model_diagnostics.py
+    deps:
+      - src/models/model_diagnostics.py
+      - data/processed/test.csv
+      - models/stacking_cat_rf_pipeline.joblib
+      - params.yaml
+    outs:
+      - reports/diagnostics
