--- a/params.yaml
+++ b/params.yaml
@@ -2,6 +2,7 @@ data_splitting:
   test_size: 0.2
   random_state: 42
 
+
 model_training:
 
   CatBoost_Regressor:
@@ -35,3 +36,24 @@ model_training:
     min_samples_split: 7
     min_samples_leaf: 8
     random_state: 42
+
+
+# CI-Controlled Promotion Policy (Governance Layer)
+
+promotion_policy:
+
+  staging_thresholds:
+
+    performance:
+      min_test_r2: 0.82
+      max_test_mae: 6.0
+
+    diagnostics:
+      max_avg_latency_ms: 50
+      max_extreme_errors: 2
+      extreme_error_threshold: 15
+
+  production_policy:
+
+    require_manual_approval: true
+    allow_auto_promotion: false
