mlflow dagshub auth updated

--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -5,20 +5,20 @@ on:
     branches:
       - master
 
+permissions:
+  contents: read
+
 env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: food_delivery_time_prediction
   ECR_REGISTRY: 125840290869.dkr.ecr.us-east-1.amazonaws.com
-  DAGSHUB_REPO_OWNER: Aryanupadhyay23
+  DAGSHUB_REPO_OWNER: aryanupadhyay23
   DAGSHUB_REPO_NAME: Food-Delivery-Time-prediction
-
-permissions:
-  contents: read
+  MLFLOW_TRACKING_URI: https://dagshub.com/aryanupadhyay23/Food-Delivery-Time-prediction.mlflow
 
 jobs:
-
-  # CI JOB
   ci:
+    name: CI - Validate and Promote Model
     runs-on: ubuntu-latest
 
     steps:
@@ -29,6 +29,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install Dev Dependencies
         run: |
           set -e
@@ -40,7 +41,7 @@ jobs:
           set -e
           flake8 src inference_app --select=E9,F63,F7,F82 --show-source --statistics
 
-      # ----------- Configure AWS for DVC S3 -----------
+      # ---------------- AWS for DVC ----------------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -48,32 +49,32 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: DVC Pull (Restore Model + Preprocessor)
+      - name: DVC Pull
         run: |
           set -e
           dvc pull
+
+      # ---------------- Model Promotion ----------------
+
       - name: Promote Model to Staging
         env:
-          MLFLOW_TRACKING_URI: https://dagshub.com/${{ env.DAGSHUB_REPO_OWNER }}/${{ env.DAGSHUB_REPO_NAME }}.mlflow
+          DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_USERNAME: ${{ env.DAGSHUB_REPO_OWNER }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
-          DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           set -e
           python src/models/promote_to_staging.py
 
       - name: Promote Model to Production
         env:
-          MLFLOW_TRACKING_URI: https://dagshub.com/${{ env.DAGSHUB_REPO_OWNER }}/${{ env.DAGSHUB_REPO_NAME }}.mlflow
+          DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_USERNAME: ${{ env.DAGSHUB_REPO_OWNER }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
-          DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           set -e
           python src/models/promote_to_production.py
-
-  # CD JOB
   cd:
+    name: CD - Build and Deploy Docker Image
     needs: ci
     runs-on: ubuntu-latest
 
@@ -103,12 +104,24 @@ jobs:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
           set -e
+
           docker run -d --name test_container \
             -p 8000:8000 \
             -e DAGSHUB_TOKEN=$DAGSHUB_TOKEN \
+            -e MLFLOW_TRACKING_USERNAME=${{ env.DAGSHUB_REPO_OWNER }} \
+            -e MLFLOW_TRACKING_PASSWORD=$DAGSHUB_TOKEN \
+            -e MLFLOW_TRACKING_URI=${{ env.MLFLOW_TRACKING_URI }} \
             $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
 
-          sleep 15
+          # Wait until API is ready (max 40s)
+          for i in {1..20}; do
+            sleep 2
+            if curl -s http://localhost:8000/health | grep healthy; then
+              echo "API is healthy."
+              break
+            fi
+          done
+
           curl --fail http://localhost:8000/health
 
           docker stop test_container
