--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -25,10 +25,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Python 3.11
+      # Python with pip caching
+      - name: Setup Python 3.11 with pip cache
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+          cache: 'pip'
+          cache-dependency-path: dev-requirements.txt
 
       - name: Install Dev Dependencies
         run: |
@@ -36,12 +39,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
 
-      - name: Lint (Critical Failures Only)
+      - name: Lint (Critical Errors Only)
         run: |
           set -e
           flake8 src inference_app --select=E9,F63,F7,F82 --show-source --statistics
 
-      # ---------------- AWS for DVC ----------------
+      # ---------- AWS Credentials for DVC ----------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -54,22 +57,24 @@ jobs:
           set -e
           dvc pull
 
-      # ---------------- Model Promotion ----------------
-
+      # ---------- Promote to Staging ----------
       - name: Promote Model to Staging
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_USERNAME: ${{ env.DAGSHUB_REPO_OWNER }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
+          MLFLOW_TRACKING_URI: ${{ env.MLFLOW_TRACKING_URI }}
         run: |
           set -e
           python src/models/promote_to_staging.py
 
+      # ---------- Promote to Production ----------
       - name: Promote Model to Production
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_USERNAME: ${{ env.DAGSHUB_REPO_OWNER }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
+          MLFLOW_TRACKING_URI: ${{ env.MLFLOW_TRACKING_URI }}
         run: |
           set -e
           python src/models/promote_to_production.py
@@ -82,6 +87,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      # ---------- AWS Login ----------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -92,13 +98,22 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build Docker Image
-        run: |
-          set -e
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} .
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} \
-                     $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      # ---------- Docker Buildx (with cache) ----------
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
+      - name: Build Docker Image with Cache
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          tags: |
+            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # ---------- Container Health Test ----------
       - name: Run Container Integration Test
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
@@ -113,7 +128,7 @@ jobs:
             -e MLFLOW_TRACKING_URI=${{ env.MLFLOW_TRACKING_URI }} \
             $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
 
-          # Wait until API is ready (max 40s)
+          # Wait for API readiness
           for i in {1..20}; do
             sleep 2
             if curl -s http://localhost:8000/health | grep healthy; then
@@ -127,6 +142,7 @@ jobs:
           docker stop test_container
           docker rm test_container
 
+      # ---------- Push to ECR ----------
       - name: Push Image to ECR
         run: |
           set -e
