--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -17,6 +17,7 @@ env:
   MLFLOW_TRACKING_URI: https://dagshub.com/aryanupadhyay23/Food-Delivery-Time-prediction.mlflow
 
 jobs:
+
   ci:
     name: CI - Validate and Promote Model
     runs-on: ubuntu-latest
@@ -25,26 +26,22 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Python with pip caching
       - name: Setup Python 3.11 with pip cache
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: 'pip'
+          cache: pip
           cache-dependency-path: dev-requirements.txt
 
       - name: Install Dev Dependencies
         run: |
-          set -e
           python -m pip install --upgrade pip
           pip install -r dev-requirements.txt
 
       - name: Lint (Critical Errors Only)
         run: |
-          set -e
           flake8 src inference_app --select=E9,F63,F7,F82 --show-source --statistics
 
-      # ---------- AWS Credentials for DVC ----------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -53,33 +50,27 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: DVC Pull
-        run: |
-          set -e
-          dvc pull
+        run: dvc pull
 
-      # ---------- Promote to Staging ----------
       - name: Promote Model to Staging
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_USERNAME: ${{ env.DAGSHUB_REPO_OWNER }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_URI: ${{ env.MLFLOW_TRACKING_URI }}
-        run: |
-          set -e
-          python src/models/promote_to_staging.py
+        run: python src/models/promote_to_staging.py
 
-      # ---------- Promote to Production ----------
       - name: Promote Model to Production
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_USERNAME: ${{ env.DAGSHUB_REPO_OWNER }}
           MLFLOW_TRACKING_PASSWORD: ${{ secrets.DAGSHUB_TOKEN }}
           MLFLOW_TRACKING_URI: ${{ env.MLFLOW_TRACKING_URI }}
-        run: |
-          set -e
-          python src/models/promote_to_production.py
+        run: python src/models/promote_to_production.py
+
+
   cd:
-    name: CD - Build and Deploy Docker Image
+    name: CD - Build, Test and Push Docker Image
     needs: ci
     runs-on: ubuntu-latest
 
@@ -87,7 +78,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # ---------- AWS Login ----------
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -98,41 +88,34 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v2
 
-      # ---------- Docker Buildx (with cache) ----------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker Image with Cache
+      - name: Build Docker Image (Load Locally)
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: false
-          tags: |
-            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-            ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+          load: true
+          tags: app:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # ---------- Container Health Test ----------
       - name: Run Container Integration Test
         env:
           DAGSHUB_TOKEN: ${{ secrets.DAGSHUB_TOKEN }}
         run: |
-          set -e
-
           docker run -d --name test_container \
             -p 8000:8000 \
             -e DAGSHUB_TOKEN=$DAGSHUB_TOKEN \
             -e MLFLOW_TRACKING_USERNAME=${{ env.DAGSHUB_REPO_OWNER }} \
             -e MLFLOW_TRACKING_PASSWORD=$DAGSHUB_TOKEN \
             -e MLFLOW_TRACKING_URI=${{ env.MLFLOW_TRACKING_URI }} \
-            $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
+            app:${{ github.sha }}
 
-          # Wait for API readiness
           for i in {1..20}; do
             sleep 2
             if curl -s http://localhost:8000/health | grep healthy; then
-              echo "API is healthy."
+              echo "API healthy"
               break
             fi
           done
@@ -142,9 +125,15 @@ jobs:
           docker stop test_container
           docker rm test_container
 
-      # ---------- Push to ECR ----------
+      - name: Tag Image for ECR
+        run: |
+          docker tag app:${{ github.sha }} \
+            $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
+
+          docker tag app:${{ github.sha }} \
+            $ECR_REGISTRY/$ECR_REPOSITORY:latest
+
       - name: Push Image to ECR
         run: |
-          set -e
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
