--- a/.github/workflows/CI_CD.yaml
+++ b/.github/workflows/CI_CD.yaml
@@ -137,3 +137,23 @@ jobs:
         run: |
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
+      - name: Zip files for deployment
+        if: success()
+        run: |
+          zip -r deployment.zip appspec.yml deploy/scripts/install_dependencies.sh deploy/scripts/start_docker.sh
+
+      - name: Upload ZIP to S3
+        if: success()
+        run: |
+          aws s3 cp deployment.zip s3://fooddeliverytimepredictiondeployment/deployment.zip
+
+      - name: Deploy to AWS CodeDeploy
+        if: success()
+        run: |
+          aws deploy create-deployment \
+            --application-name food-delivery-time-prediction-app \
+            --deployment-config-name CodeDeployDefault.OneAtATime \
+            --deployment-group-name food-delivery-time-prediction-group \
+            --s3-location bucket=deliverytimepredictiondeployment,key=deployment.zip,bundleType=zip \
+            --file-exists-behavior OVERWRITE \
+            --region us-east-1
